--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "simple node app that generates passwords upon request",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node src/main.ts",
+    "dev": "nodemon src/main.ts"
   },
   "keywords": [
     "nodejs",
@@ -16,10 +17,12 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "cli-color": "^2.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/cli-color": "^2.0.2",
     "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
