--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "rabeeasaf",
   "version": "1.0.0",
   "description": "simple node app that generates passwords upon request",
-  "main": "index.js",
+  "main": "src/main.ts",
   "scripts": {
     "start": "ts-node src/main.ts",
     "dev": "nodemon src/main.ts"
