--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "dependencies": {
     "cli-color": "^2.0.3",
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "lodash.random": "^3.2.0"
   },
   "devDependencies": {
     "@types/cli-color": "^2.0.2",
     "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.14",
+    "@types/lodash.random": "^3.2.7",
     "@types/node": "^18.11.9",
     "dotenv": "^16.0.3",
     "nodemon": "^2.0.20",
