--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "src/main.ts",
   "scripts": {
     "start": "ts-node src/main.ts",
-    "dev": "nodemon src/main.ts"
+    "dev": "nodemon src/main.ts",
+    "build": "tsc"
   },
   "keywords": [
     "nodejs",
@@ -30,6 +31,7 @@
     "@types/node": "^18.11.9",
     "dotenv": "^16.0.3",
     "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   }
 }
